--- a/RealmModelGenerator/EntityDetailView.xib
+++ b/RealmModelGenerator/EntityDetailView.xib
@@ -56,7 +56,7 @@
                     <rect key="frame" x="87" y="440" width="156" height="26"/>
                     <popUpButtonCell key="cell" type="push" title="Item 1" bezelStyle="rounded" alignment="center" lineBreakMode="truncatingTail" state="on" borderStyle="border" allowsMixedState="YES" inset="2" selectedItem="j3u-eE-oz0" id="zxG-kS-tEr">
                         <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
-                        <font key="font" metaFont="menu"/>
+                        <font key="font" size="11" name="Menlo-Regular"/>
                         <menu key="menu" id="doA-oy-bcy">
                             <items>
                                 <menuItem title="Item 1" state="on" id="j3u-eE-oz0"/>
