Fixed Version and Export As Menu Button StoryBoard Issue, Modified the Swift Content Generator to include "objcMembers" and changed deprecated "flatMap" to "CompactMap"

--- a/RealmModelGenerator/Base.lproj/Main.storyboard
+++ b/RealmModelGenerator/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="13771"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14113"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -91,19 +91,19 @@
                                                     <menuItem title="Java" id="gpd-D5-Q27" userLabel="Java">
                                                         <modifierMask key="keyEquivalentModifierMask"/>
                                                         <connections>
-                                                            <action selector="exportToJava:" target="Ady-hI-5gd" id="AZc-YA-7YH"/>
+                                                            <action selector="exportToJavaWithSender:" target="Ady-hI-5gd" id="pWV-yZ-d49"/>
                                                         </connections>
                                                     </menuItem>
                                                     <menuItem title="Object C" id="633-EG-9O9" userLabel="Object C">
                                                         <modifierMask key="keyEquivalentModifierMask"/>
                                                         <connections>
-                                                            <action selector="exportToObjectC:" target="Ady-hI-5gd" id="haX-oc-5fn"/>
+                                                            <action selector="exportToObjectCWithSender:" target="Ady-hI-5gd" id="2Io-3t-ehN"/>
                                                         </connections>
                                                     </menuItem>
                                                     <menuItem title="Swift" id="PFl-Zm-5MG" userLabel="Swift">
                                                         <modifierMask key="keyEquivalentModifierMask"/>
                                                         <connections>
-                                                            <action selector="exportToSwift:" target="Ady-hI-5gd" id="Y3w-zj-iMV"/>
+                                                            <action selector="exportToSwiftWithSender:" target="Ady-hI-5gd" id="GO0-EB-Ied"/>
                                                         </connections>
                                                     </menuItem>
                                                 </items>
@@ -112,7 +112,7 @@
                                         <menuItem title="Version" id="YFC-YP-hiY">
                                             <modifierMask key="keyEquivalentModifierMask"/>
                                             <connections>
-                                                <action selector="versonMenuOnClick:" target="Ady-hI-5gd" id="cD9-BZ-A3D"/>
+                                                <action selector="versionMenuOnClickWithSender:" target="Ady-hI-5gd" id="iHf-HQ-2cK"/>
                                             </connections>
                                         </menuItem>
                                         <menuItem title="Close" keyEquivalent="w" id="DVo-aG-piG">
